<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_welcome"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeBtnStart"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_120sdp"
        android:background="@drawable/btn_background"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_26ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeBtnSettings"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn_background"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/Settings"
        android:textAllCaps="false"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_26ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBtnStart"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeBtnLogout"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn_background"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/Logout"
        android:textAllCaps="false"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_26ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBtnSettings"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>