<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_settings_background"
    android:padding="@dimen/_30sdp"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settingsTvNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18sdp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/notification" />

        <Switch
            android:id="@+id/settingsSwNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minHeight="48dp"
            android:thumb="@drawable/ic_bell" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/settingsTvSounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/sounds"
            android:textSize="@dimen/_18sdp" />

        <Switch
            android:id="@+id/settingsSwSounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:thumb="@drawable/ic_sound" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingBtnNewPlay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/background"
        android:fontFamily="casual"
        android:text="@string/new_play"
        android:textAllCaps="false"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingBtnProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/background"
        android:fontFamily="casual"
        android:text="@string/profile"
        android:textAllCaps="false"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingBtnNewPlay"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>