<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_level_background"
    android:padding="@dimen/_35sdp"
    tools:context=".LevelActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <TextView
                android:id="@+id/levelTvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/score"
                android:textColor="@color/teal"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/levelTvScoreValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/numValue"
                android:textColor="@color/teal_"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <TextView
                android:id="@+id/levelTvPuzzle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/puzzle"
                android:textColor="@color/teal"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/levelTvPuzzleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/numValue"
                android:textColor="@color/teal_"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/levelVp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/levelTvSkip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <TextView
        android:id="@+id/levelTvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_weight="1"
        android:drawablePadding="@dimen/_2sdp"
        android:fontFamily="cursive"
        android:padding="@dimen/_5sdp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/teal"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold|italic"
        app:drawableEndCompat="@drawable/ic_arrow_24"
        app:drawableTint="@color/teal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>